tests/typing/errors/mcil/undefined-system.mcil
(set-logic ALL)
(check-system sys :query (q ()))